--- a/style.css
+++ b/style.css
@@ -146,6 +146,27 @@ footer {
      margin-bottom: 0; /* убираем отступ снизу */
 }
 
+.download-button {
+    display: inline-flex;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #111; /* Зеленый цвет */
+    color: #111;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    margin-top: 10px; /* Отступ сверху */
+}
+
+.download-button:hover {
+    background-color: #111; /* Более темный зеленый при наведении */
+}
+
+.download-button i {
+    margin-right: 8px;
+    font-size: 1.2em;
+}
+
 /* Адаптивность */
 @media (max-width: 768px) {
     .container {
